v1.0.4
Default page now has sidebar - CHANGED
Added full width page template - ADDED

v1.0.3
Primary Sidebar not working - FIXED
CSS changes for GD - CHANGED
Footer credit links - ADDED

v1.0.2
Search form not responsive - FIXED

v1.0.1
Footer links not working - FIXED
Header top section - ADDED
Settings added to change header top colors - ADDED
Customizer code refactoring and bug fixes - FIXED
Customizer styles loading before main styles - FIXED
Header logo/menu changed from float to inline-block -  CHANGED
Customizer settings added for logo/menu widths - ADDED
3rd level menu items sometimes have problems - FIXED