@@ -1,6 +1,7 @@
 v1.0.4
 Default page now has sidebar - CHANGED
 Added full width page template - ADDED
+Pages now have their own sidebar - ADDED
 
 v1.0.3
 Primary Sidebar not working - FIXED
